--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "eslint": "^8.39.0",
     "express": "^4.18.2",
     "mongoose": "^6.2.6"
   }
