--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.39.0",
     "express": "^4.18.2",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "socket.io": "^4.6.1"
   }
 }
